--- a/src/app/components/pokemon-list/pokemon-list.component.css
+++ b/src/app/components/pokemon-list/pokemon-list.component.css
@@ -1,6 +1,5 @@
-/* Fondo general */
 .contenedor {
-  background: #ffffff;
+  background: #77daf3;
   padding: 2rem;
   border-radius: 20px;
   max-width: 900px;
@@ -8,11 +7,9 @@
   font-family: 'Press Start 2P';
   font-size: 3px;
   color: #fff;
-  box-shadow: 0 10px 25px rgba(0,0,0,0.7);
   text-align: center;
 }
 
-/* Inputs estilo moderno */
 .buscador,
 .filtro-tipo {
   font-family: 'Press Start 2P', cursive;
@@ -69,7 +66,6 @@ ul {
   box-shadow: 0 16px 30px rgba(63, 66, 255, 0.8);
 }
 
-/* Imagen Pokémon */
 .pokemon-item img {
   width: 200px;
   height: 200px;
@@ -77,7 +73,6 @@ ul {
   margin-bottom: 1rem;
 }
 
-/* Nombre Pokémon */
 .pokemon-item span {
   font-weight: 700;
   font-size: 1.1rem;
@@ -93,9 +88,8 @@ ul {
   flex-wrap: wrap;
 }
 
-/* Etiquetas tipo badge */
 .tipo {
-  background-color: #3f52ff; /* azul vibrante para combinar con el texto */
+  background-color: #3f52ff;
   color: white;
   font-weight: 600;
   font-size: 0.75rem;
@@ -103,7 +97,6 @@ ul {
   border-radius: 12px;
 }
 
-/* Mensaje "No se encontraron" */
 p {
   font-size: 1.1rem;
   color: #ccc;
