--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,9 @@
-<h1>Mi Pokédex</h1>
-<app-pokemon-list></app-pokemon-list>
+<div class="encabezado">
+  <img src="https://upload.wikimedia.org/wikipedia/commons/5/53/Poké_Ball_icon.svg" alt="Pokébola" width="300" height="300" />
+  <img src="https://logos-world.net/wp-content/uploads/2020/05/Pokemon-Logo.png" alt="Logo Pokémon" width="540" height="300"/>
+
+</div>
+
+<main class="contenido">
+  <app-pokemon-list></app-pokemon-list>
+</main>
