--- a/src/app/components/pokemon-list/pokemon-list.component.css
+++ b/src/app/components/pokemon-list/pokemon-list.component.css
@@ -1,35 +1,39 @@
+/* Contenedor principal */
 .contenedor {
   background: #77daf3;
   padding: 2rem;
   border-radius: 20px;
   max-width: 900px;
-  margin: 3rem auto;
-  font-family: 'Press Start 2P';
+  font-family: 'Press Start 2P', cursive;
   font-size: 3px;
   color: #fff;
   text-align: center;
 }
 
-.buscador,
-.filtro-tipo {
-  font-family: 'Press Start 2P', cursive;
-  width: 100%;
-  max-width: 320px;
-  padding: 12px 15px;
-  margin: 0.5rem auto 1.5rem;
-  border-radius: 30px;
-  border: none;
-  font-size: 16px;
-  background-color: #ffffff;
-  color: #000000;
-  box-shadow: inset 0 0 8px rgba(0,0,0,0.8);
-  transition: background-color 0.3s ease, box-shadow 0.3s ease;
+/* Controles: buscador arriba, filtro abajo */
+.barra-controles {
+  display: flex;
+  flex-direction: column;   /* uno arriba del otro */
+  align-items: center;
+  gap: 0.5rem;              /* espacio vertical */
+  margin-bottom: 1.5rem;
 }
 
-.buscador::placeholder,
-.filtro-tipo option {
-  color: #050505;
+/* Input de búsqueda y filtro tipo */
+.buscador,
+.filtro-tipo {
+  font-family: 'Press Start 2P';
+  width: 100%;
+  max-width: 320px;
+  padding: 20px;
+  border: none;
+  font-size: 17px;
+  background-color: #ffffff;
+  color: #000000;
+  text-align: center;
 }
+
+
 
 .buscador:focus,
 .filtro-tipo:focus {
@@ -37,33 +41,32 @@
   outline: none;
 }
 
+/* Lista de Pokémon */
 ul {
   list-style: none;
   padding: 0;
   margin: 0 auto;
   max-width: 900px;
   display: grid;
-  grid-template-columns: repeat(auto-fit,minmax(180px,1fr));
+  grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
   gap: 1rem;
   justify-items: center;
 }
 
+/* Cada Pokémon */
 .pokemon-item {
   background: #ffffff;
-  border-radius: 20px;
   padding: 1.5rem 1rem;
-  box-shadow: 0 8px 20px rgba(255, 255, 255, 0.6);
   width: 180px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  transition: transform 0.5s ease, box-shadow 0.3s ease;
   cursor: pointer;
 }
 
 .pokemon-item:hover {
   transform: translateY(-8px);
-  box-shadow: 0 16px 30px rgba(63, 66, 255, 0.8);
+  box-shadow: 0 10px 0px rgba(63, 66, 255, 0.8);
 }
 
 .pokemon-item img {
@@ -80,6 +83,7 @@ ul {
   color: #141414;
 }
 
+/* Tipos del Pokémon */
 .tipos {
   margin-top: 6px;
   display: flex;
@@ -97,8 +101,9 @@ ul {
   border-radius: 12px;
 }
 
+/* Mensaje cuando no hay resultados */
 p {
   font-size: 1.1rem;
-  color: #ccc;
+  color: #070505;
   margin-top: 2rem;
 }
